--- a/src/interfaz/Calendario.form
+++ b/src/interfaz/Calendario.form
@@ -41,8 +41,10 @@
               <Component id="atrasBoton" min="-2" max="-2" attributes="0"/>
               <EmptySpace min="-2" pref="92" max="-2" attributes="0"/>
               <Component id="actPeriodicaBoton" min="-2" max="-2" attributes="0"/>
-              <EmptySpace type="separate" max="-2" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
               <Component id="actividadRegBoton" min="-2" max="-2" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
+              <Component id="borrarActividad" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="32767" attributes="0"/>
           </Group>
           <Group type="102" alignment="0" attributes="0">
@@ -74,6 +76,7 @@
                   <Component id="atrasBoton" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="actPeriodicaBoton" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="actividadRegBoton" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="borrarActividad" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
           </Group>
@@ -134,6 +137,14 @@
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="eventosDiaBoton1ActionPerformed"/>
+      </Events>
+    </Component>
+    <Component class="javax.swing.JButton" name="borrarActividad">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Borrar una actividad"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="borrarActividadActionPerformed"/>
       </Events>
     </Component>
   </SubComponents>
